--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,27 @@
-# ── Copy this file to .env and fill in your values ───────────────────────────
-
-# Telegram Bot Token (from @BotFather)
-BOT_TOKEN=your_bot_token_here
-
-# Bot username (without @)
+# ── Telegram ─────────────────────────────────────────────────────────────────
+# Get API_ID and API_HASH from https://my.telegram.org/apps
+API_ID=12345678
+API_HASH=your_api_hash_here
+BOT_TOKEN=your_bot_token_from_botfather
 BOT_USERNAME=YourBotUsername
-
-# Admin Telegram User IDs (comma-separated)
 ADMIN_IDS=123456789,987654321
 
-# TMDb API Key (get from https://www.themoviedb.org/settings/api)
-TMDB_API_KEY=your_tmdb_api_key_here
+# ── MongoDB Atlas (free tier) ─────────────────────────────────────────────────
+MONGO_URI=mongodb+srv://user:pass@cluster.mongodb.net/CosmicBotz
 
-# MongoDB Connection URI
-MONGO_URI=mongodb://localhost:27017
-
-# Redis URL (optional — falls back to in-memory if not set)
+# ── Redis (optional — falls back to in-memory) ────────────────────────────────
 REDIS_URL=redis://localhost:6379
+
+# ── TMDb (required) ───────────────────────────────────────────────────────────
+# Free key from https://www.themoviedb.org/settings/api
+TMDB_API_KEY=your_tmdb_key
+
+# ── IMDb enrichment (optional — pick one or neither) ─────────────────────────
+# RapidAPI key from https://rapidapi.com/apidojo/api/imdb8
+IMDB_API_KEY=
+# OMDb key from https://www.omdbapi.com (1000 req/day free)
+OMDB_API_KEY=
+
+# ── Limits ────────────────────────────────────────────────────────────────────
+FREE_POSTS_PER_DAY=10
+PREMIUM_POSTS_PER_DAY=999
